--- a/ifscproject/package.json
+++ b/ifscproject/package.json
@@ -28,6 +28,7 @@
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "source-map-support": "^0.5.3",
     "webpack": "^3.1.0",
     "webpack-cli": "^2.0.10",
